plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'com.assu'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	google()
	mavenCentral()
}

dependencies {
	// Spring boot
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// rabbit mq
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'

	// webflux; webclient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	testImplementation 'org.springframework.batch:spring-batch-test'

	//Jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// GSON
	implementation 'com.google.code.gson:gson:2.11.0'

	// S3
	implementation platform('software.amazon.awssdk:bom:2.25.33')
	implementation 'software.amazon.awssdk:s3'

	// jsoup (crawl)
	implementation 'org.jsoup:jsoup:1.21.1'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Swagger 3 (SpringDoc OpenAPI)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

    // chatting
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// maria db
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'

	// spring test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// junit
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// h2 db (test)
	runtimeOnly 'com.h2database:h2'

	// JSON 처리
	implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

	// 공간 데이터
	implementation("org.hibernate.orm:hibernate-spatial")
	implementation("org.locationtech.jts:jts-core:1.19.0")

	// fcm
	implementation 'com.squareup.okhttp3:okhttp:4.10.0'
	//implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.18.0'
	implementation 'com.google.firebase:firebase-admin:9.2.0'

	// amqp
	implementation("org.springframework.boot:spring-boot-starter-amqp")
	implementation("com.fasterxml.jackson.core:jackson-databind")

	// health-check
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
}

tasks.named('test') {
	useJUnitPlatform()
}
